# streamlitcashflow

./: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  run_tests.py
.github/workflows/: ci.yml
docs/: architecture.md
migrations/: env.py
migrations/versions/: 0001_initial.py  001_initial_schema.py
src/: logging_config.py  metrics.py
src/db/: models.py  session.py
src/etl/: etl.py
src/forecast/: forecast.py
src/payment/: payment.py
src/rules/: rules.py
src/scheduler/: scheduler.py
src/ui/: app.py
tests/: conftest.py  test_end_to_end.py
tests/etl/: test_etl.py
tests/forecast/: test_forecast.py
tests/payment/: test_payment.py
tests/rules/: test_rules.py
